<resources>
    <string name="app_name">Splacounter2</string>
    <string name="main_text1">Remaining</string>
    <string name="game_reload">Reload</string>
    <string name="game_consume">Played</string>

    <string name="error_sign_up">Sign up Failed</string>
    <string name="error_login_text_empty">Please input your Todoist API token</string>

    <!-- Auth -->
    <string name="login_succeeded">Login succeeded</string>
    <string name="login_failed">Login failed</string>

    <!-- Reward -->
    <string name="reward_title">Reward</string>
    <string name="format_consume_point">%dP</string>
    <string name="reward_empty_text">Please add new reward</string>
    <string name="confirm_title">Confirm</string>
    <string name="reward_delete_message">%s was Deleted</string>
    <string name="delete_confirm_message">Do you delete %s?</string>
    <string name="error_acquire_reward">You need more points</string>
    <string name="point_with_unit">%d Points</string>

    <!-- Reward Add -->
    <string name="hint_title">Reward Title</string>
    <string name="hint_description">Reward Description</string>
    <string name="hint_point">Consume Point</string>
    <string name="check_repeat">Repeat</string>
    <string name="button_add">Add</string>
    <string name="error_empty_title">Input title</string>
    <string name="error_empty_point">Input point</string>

</resources>
