<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="kztproject.jp.splacounter.viewmodel.PlayViewModel"/>
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fbutton="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/main_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_text_1"
            android:layout_marginTop="8dp"
            android:background="@drawable/counter_bg"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="72sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_counter"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_counter"
            android:layout_margin="8dp"
            android:onClick="@{() -> viewModel.getGameCount()}"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/game_reload"
            fbutton:buttonColor="@color/colorAccent" />

        <info.hoang8f.widget.FButton
            android:id="@+id/reward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/text_counter"
            android:layout_below="@id/text_counter"
            android:layout_margin="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/reward_title"
            fbutton:buttonColor="@color/colorAccent" />

        <info.hoang8f.widget.FButton
            android:id="@+id/count_down_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:text="@string/game_consume"
            android:textSize="20sp"
            fbutton:buttonColor="@color/colorAccent" />

    </RelativeLayout>
</layout>